--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "joi": "^17.11.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
