--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
     "joi": "^17.11.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
