Added a password field to the authorSchema Salted and hashed the author password

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 db_uri=mongodb+srv://next-centric:FpXK60qbODKdvyCA@cluster0.25bwfzy.mongodb.net/macBlog?retryWrites=true&w=majority
 
 port=5000
+
+auth_key=wXYubyvG,26h0mX4-_73R5os3aDt*KdtM3e7
